force-app/main/default/objects/Fulfillment__c/fields/Avg_Rating__c.field-meta.xml
<CustomField>
    <fullName>Avg_Rating__c</fullName>
    <formula>(IF(ISNULL(Q1_Rating__c),0,Q1_Rating__c) + IF(ISNULL(Q2_Rating__c ),0,Q2_Rating__c )+IF(ISNULL(Q3_Rating__c  ),0,Q3_Rating__c  ) +IF(ISNULL(Q4_Rating__c ),0,Q4_Rating__c ))/(IF(ISNULL(Q1_Rating__c),0,1) + IF(ISNULL(Q2_Rating__c ),0,1)+IF(ISNULL(Q3_Rating__c  ),0,1) + IF(ISNULL(Q4_Rating__c ),0,1))</formula>
    <label>Avg Rating(Quarters)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>