force-app/main/default/objects/Fulfillment__c/fields/Next_Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Appraisal_Date__c</fullName>
    <description>Next appraisal date value of the related Resource(Contact)</description>
    <formula>Resource__r.Next_Appraisal_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Next appraisal date value of the related Resource</inlineHelpText>
    <label>Next Appraisal Date</label>
    <type>Date</type>
</CustomField>