force-app/main/default/objects/Fulfillment__c/fields/Overall_Comments__c.field-meta.xml
<CustomField>
    <fullName>Overall_Comments__c</fullName>
    <label>Overall Comments</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>