force-app/main/default/objects/Fulfillment__c/fields/Q2_Rating__c.field-meta.xml
<CustomField>
    <fullName>Q2_Rating__c</fullName>
    <label>Q2 Rating</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>