force-app/main/default/objects/Fulfillment__c/fields/Recognization_Message__c.field-meta.xml
<CustomField>
    <fullName>Recognization_Message__c</fullName>
    <label>Recognization Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>