force-app/main/default/objects/Fulfillment__c/fields/Recognization_Type__c.field-meta.xml
<CustomField>
    <fullName>Recognization_Type__c</fullName>
    <label>Recognization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shout Out</fullName>
            </value>
            <value>
                <fullName>Pat On Back</fullName>
            </value>
            <value>
                <fullName>Thank You</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>