force-app/main/default/objects/Fulfillment__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fulfillments</relationshipLabel>
    <relationshipName>Fulfillments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>