force-app/main/default/objects/Fulfillment__c/recordTypes/Appraisal.recordType-meta.xml
<RecordType>
    <fullName>Appraisal</fullName>
    <active>true</active>
    <label>Appraisal</label>
</RecordType>