force-app/main/default/objects/Fulfillment__c/recordTypes/Recognization.recordType-meta.xml
<RecordType>
    <fullName>Recognization</fullName>
    <active>true</active>
    <label>Recognization</label>
</RecordType>